--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ function MM_swapImage() { //v3.0
  </script>
  </head>
  
-<body onLoad="MM_preloadImages('imagenes/archivos/deporte2.jpg','imagenes/citlista.jpg','imagenes/animacion.jpg')">
+<body onLoad="MM_preloadImages('imagenes/archivos/deporte2.jpg','imagenes/citlista.jpg','imagenes/animacion.jpg','imagenes/cuautemoc2.jpg','../../DAM/segundo parcial/aplicaciones/app4/imagenes/cuauhtemoc.jpg')">
  
 <div data-role="page" id="Principal" data-theme="a">
   <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="a">
@@ -60,9 +60,20 @@ function MM_swapImage() { //v3.0
    <img src="imagenes/manifiesto.jpg" width="40%" height="40%" >
    </div>
   </div>
+  <div data-role="collapsible" data-content-theme="false">
+  <h1>la contaminacion en mi pueblo por los coches</h1>
+   <div>
+   <p>la contaminacion en mi pueblo por los coches y el ambiente que hay en <br>
+  esa pequeña localidad.</p>
+   <br>
+   </div>
+   <div>
+     <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image27','','../../DAM/segundo parcial/aplicaciones/app4/imagenes/cuauhtemoc.jpg',1)"><img src="../../DAM/segundo parcial/aplicaciones/app4/imagenes/cuautemoc2.jpg" width="500" height="281" id="Image27"></a></div>
+  </div>
  </div>
- <div>
- <ul data-role="listview" data-theme="a" class="ui-listview ui-group-theme-b">
+  <div>
+  
+    <ul data-role="listview" data-theme="a" class="ui-listview ui-group-theme-b">
  <li class="ui-first-child ui-last-child">
  <a href="#Pagina1" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
  <h2>Definicion</h2>
